# ClaimLightning

./: .gitignore  Dockerfile  README.md  example.env  pyproject.toml
src/ai_model/: aimlapi.py  memory_context.py  systemprompt.yaml
src/application/: api_route.py  datamodels.py  main.py
src/config/: app_settings.py  appconfig.py
src/domain/: conversation_manager.py  process_claim.py
src/domain/policyintelligencemodule/: conversationmanager.py  systemprompt.yaml
src/infrastructure/: schema.py
src/infrastructure/database/: mongo.py
src/services/: process_claim.py
src/static/css/: claim.css
src/templates/: admin.html  claim.html  index.html
src/utilities/: cold_start.py  prompt_loader.py  utils.py
